k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deba-api-service
spec:
  selector:
    app: deba-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
