k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deba-postgres-service
spec:
  selector:
    app: deba-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
